--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,21 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
+
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="jornada_prompt">Selecciona la jornada:</string>
+    <string-array name="jornada_options">
+        <item>Jornada</item>
+        <item>Mañana</item>
+        <item>Tarde</item>
+        <item>Noche</item>
+    </string-array>
+    <string name="charlas_prompt">Charlas más solicitadas</string>
+    <string-array name="charlas_array">
+        <item>Psicología</item>
+        <item>Deporte</item>
+    </string-array>
 </resources>
