--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,21 @@
         <item>Noche</item>
     </string-array>
     <string name="charlas_prompt">Charlas más solicitadas</string>
+
+    <string name="solicitar_charla">Solicitar Charla</string>
+    <string name="actualizar_datos">Actualizar datos</string>
+
+    <string name="hola">hola</string>
+    <string name="sostenimiento">Sostenimiento</string>
+    <string name="eventos">Eventos</string>
+    <string name="confirmar_contrase_a">Confirmar contraseña</string>
+    <string name="contrase_a_nueva">Contraseña nueva</string>
+    <string name="contrase_a_actual">Contraseña actual</string>
+    <string name="correo">Correo</string>
+    <string name="contacto">Contacto</string>
+    <string name="usuario">Usuario</string>
+    <string name="nombre">Nombre</string>
+    <string name="configuracion_general">Configuracion General</string>
     <string-array name="charlas_array">
         <item>Psicología</item>
         <item>Deporte</item>
